fix(app/button): fix off-centre button

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -84,8 +84,12 @@ p[size-tiny],
 i[size-tiny] { font-size: .4em; }
 
 button[round] {
-	padding-left: ui(spacing) / 2;
+	padding-left: ui(spacing);
 	padding-right: ui(spacing);
+
+	&[icon] {
+		padding-right: ui(spacing) / 2 !important;	
+	}
 }
 
 p[badge] {
